Fix site navigation flow

--- a/about-eden.html
+++ b/about-eden.html
@@ -351,7 +351,7 @@
                 <a href="about-eden.html">About Eden</a>
                 <a href="features.html">Features</a>
                 <a href="journey.html">Journey</a>
-                <a href="index.html#pricing">Pricing</a>
+                <a href="pricing.html">Pricing</a>
             </nav>
             <div class="header-actions">
                 <a href="members-new.html" class="btn btn-secondary">Login</a>
