--- a/about-nazir-enhanced.html
+++ b/about-nazir-enhanced.html
@@ -517,7 +517,7 @@
                 <a href="about-eden.html">About Eden</a>
                 <a href="features.html">Features</a>
                 <a href="journey.html">Journey</a>
-                <a href="index.html#pricing">Pricing</a>
+                <a href="pricing.html">Pricing</a>
             </nav>
             <div class="header-actions">
                 <a href="members-new.html" class="btn btn-secondary">Login</a>
@@ -776,7 +776,7 @@
             <div class="cta-buttons">
                 <a href="members-new.html" class="btn btn-primary">Start Your 4-Phase Journey</a>
                 <a href="journey.html" class="btn btn-secondary">See the Full Path</a>
-                <a href="index.html#pricing" class="btn btn-secondary">View Pricing Options</a>
+                <a href="pricing.html" class="btn btn-secondary">View Pricing Options</a>
             </div>
         </section>
     </main>
