--- a/audiobook.html
+++ b/audiobook.html
@@ -610,9 +610,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#book">Book</a></li>
+                <li><a href="books.html">Book</a></li>
                 <li><a href="#audiobook">Audiobook</a></li>
-                <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="sections/index.html">Temple</a></li>
                 <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="resources.html">Resources</a></li>
@@ -935,13 +935,13 @@
                     <h3>Creator Tools</h3>
                     <a href="https://try.elevenlabs.io/3kzjj59tn1qx" target="_blank" rel="noopener">ElevenLabs AI Voice</a>
                     <a href="mailto:edenconsciousnesssdt@gmail.com">Content Creation Support</a>
-                    <a href="index.html#email-capture">Free Resources</a>
+                    <a href="pricing.html">Free Resources</a>
                     <a href="resources.html">More Tools</a>
                 </div>
                 <div class="footer-section">
                     <h3>Support</h3>
                     <a href="mailto:edenconsciousnesssdt@gmail.com">Contact Us</a>
-                    <a href="index.html#email-capture">Free Chapter</a>
+                    <a href="pricing.html">Free Chapter</a>
                     <a href="https://nazarite777.github.io/divine-temple">Visit Site</a>
                     <a href="members-new.html">Member Support</a>
                 </div>
