--- a/book-reviews.html
+++ b/book-reviews.html
@@ -432,9 +432,9 @@
                 <div class="logo">🏛️ EDEN CONSCIOUSNESS</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#book">Book</a></li>
+                    <li><a href="books.html">Book</a></li>
                     <li><a href="audiobook.html">Audiobook</a></li>
-                    <li><a href="index.html#temple">Temple</a></li>
+                    <li><a href="sections/index.html">Temple</a></li>
                     <li><a href="members-new.html">Member Portal</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="resources.html">Resources</a></li>
@@ -859,7 +859,7 @@
             </p>
             
             <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
-                <a href="sales-page.html" class="cta-button" style="max-width: 300px;">VIEW ALL PACKAGES</a>
+                <a href="pricing.html" class="cta-button" style="max-width: 300px;">VIEW ALL PACKAGES</a>
                 <a href="members-new.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-purple), var(--accent-blue)); max-width: 300px;">ENTER DIVINE TEMPLE</a>
             </div>
         </div>
@@ -880,7 +880,7 @@
                 <a href="members-new.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
                 <a href="testimonials.html" style="color: var(--text-secondary); text-decoration: none;">Testimonials</a>
                 <a href="book-reviews.html" style="color: var(--text-secondary); text-decoration: none;">Book Reviews</a>
-                <a href="sales-page.html" style="color: var(--text-secondary); text-decoration: none;">Get Started</a>
+                <a href="pricing.html" style="color: var(--text-secondary); text-decoration: none;">Get Started</a>
             </div>
             
             <p style="color: var(--text-secondary); font-size: 0.9rem; margin: 1rem 0;">
