--- a/combo-packages.html
+++ b/combo-packages.html
@@ -334,7 +334,7 @@
                     <li><a href="members-new.html">Divine Temple</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="combo-packages.html">Packages</a></li>
-                    <li><a href="sales-page.html">Get Started</a></li>
+                    <li><a href="pricing.html">Get Started</a></li>
                 </ul>
             </nav>
         </div>
