--- a/dashboard.html
+++ b/dashboard.html
@@ -390,7 +390,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="index.html" class="logo"><img src="/images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
+            <a href="index.html" class="logo"><img src="images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
             <div class="user-menu">
                 <span class="user-name">Welcome, Seeker ✨</span>
                 <button class="logout-btn" onclick="alert('Logout functionality will connect to members-new.html authentication')">Logout</button>
@@ -404,7 +404,7 @@
             <h3>Navigation</h3>
             <ul class="sidebar-menu">
                 <li><a href="dashboard.html" class="active">🏠 Dashboard</a></li>
-                <li><a href="phase1-awakening.html">🌅 My Journey</a></li>
+                <li><a href="journey.html">🌅 My Journey</a></li>
                 <li><a href="meditation.html">🧘 Meditation</a></li>
                 <li><a href="chat.html">💬 Community Chat</a></li>
                 <li><a href="journal.html">📖 Sacred Journal</a></li>
@@ -422,7 +422,7 @@
                 <h1 id="dashboard">Welcome to the Divine Temple</h1>
                 <p>You are now part of the awakening community. Your journey from consciousness to mastery begins here.</p>
                 <div class="welcome-buttons">
-                    <a href="phase1-awakening.html" class="btn btn-primary">Continue Your Journey</a>
+                    <a href="journey.html" class="btn btn-primary">Continue Your Journey</a>
                     <a href="meditation.html" class="btn btn-secondary">Start Meditation</a>
                     <a href="chat.html" class="btn btn-secondary">Join Community</a>
                 </div>
@@ -495,43 +495,47 @@
             <section class="phase-progress">
                 <h2 id="journey">Your 4-Phase Journey</h2>
                 
-                <div class="phase-item">
+                <div class="phase-item" style="cursor: pointer;" onclick="window.location.href='phase1-awakening.html'">
                     <div class="phase-badge">🌅</div>
                     <div class="phase-info">
                         <h3>Phase 1: Awakening (In Progress)</h3>
                         <p>Remember your divine nature through foundational teachings. Current: Reading Ya Heard Me audiobook.</p>
                         <div class="progress-bar"><div class="progress-fill" style="width: 45%;"></div></div>
                         <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #888;">45% Complete · 41 days remaining</p>
+                        <a href="phase1-awakening.html" style="display: inline-block; margin-top: 0.75rem; color: #F59E0B; font-weight: 600; text-decoration: none;">Continue Phase 1 →</a>
                     </div>
                 </div>
 
-                <div class="phase-item">
+                <div class="phase-item" style="cursor: pointer;" onclick="window.location.href='phase2-understanding.html'">
                     <div class="phase-badge">🧠</div>
                     <div class="phase-info">
                         <h3>Phase 2: Understanding (Locked)</h3>
                         <p>Master the 7 Aligned Principles. Unlock after completing Phase 1.</p>
                         <div class="progress-bar"><div class="progress-fill" style="width: 0%;"></div></div>
                         <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #888;">Locked · Complete Phase 1 to unlock</p>
+                        <a href="phase2-understanding.html" style="display: inline-block; margin-top: 0.75rem; color: #8B5CF6; font-weight: 600; text-decoration: none;">View Phase 2 →</a>
                     </div>
                 </div>
 
-                <div class="phase-item">
+                <div class="phase-item" style="cursor: pointer;" onclick="window.location.href='phase3-mastery.html'">
                     <div class="phase-badge">⚡</div>
                     <div class="phase-info">
                         <h3>Phase 3: Mastery (Locked)</h3>
                         <p>365-day daily practice integration. Unlock after Phase 2.</p>
                         <div class="progress-bar"><div class="progress-fill" style="width: 0%;"></div></div>
                         <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #888;">Locked · Progress through earlier phases</p>
+                        <a href="phase3-mastery.html" style="display: inline-block; margin-top: 0.75rem; color: #8B5CF6; font-weight: 600; text-decoration: none;">View Phase 3 →</a>
                     </div>
                 </div>
 
-                <div class="phase-item">
+                <div class="phase-item" style="cursor: pointer;" onclick="window.location.href='phase4-teaching.html'">
                     <div class="phase-badge">👑</div>
                     <div class="phase-info">
                         <h3>Phase 4: Teaching (Locked)</h3>
                         <p>Become a certified teacher & guide others. Unlock after Phase 3.</p>
                         <div class="progress-bar"><div class="progress-fill" style="width: 0%;"></div></div>
                         <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #888;">Locked · Full mastery required</p>
+                        <a href="phase4-teaching.html" style="display: inline-block; margin-top: 0.75rem; color: #8B5CF6; font-weight: 600; text-decoration: none;">View Phase 4 →</a>
                     </div>
                 </div>
             </section>
@@ -589,7 +593,7 @@
                 <h4>Learn</h4>
                 <a href="about-eden.html">About Eden</a>
                 <a href="features.html">Features</a>
-                <a href="phase1-awakening.html">Journey</a>
+                <a href="journey.html">Journey</a>
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
