--- a/declaration.html
+++ b/declaration.html
@@ -751,7 +751,7 @@
     <!-- Footer -->
     <footer class="footer-nav">
         <a href="index.html">Home</a>
-        <a href="about-nazir.html">About</a>
+        <a href="about-nazir-enhanced.html">About</a>
         <a href="books.html">Books</a>
         <a href="audiobook.html">Audiobook</a>
         <a href="contact.html">Contact</a>
