--- a/events.html
+++ b/events.html
@@ -376,8 +376,8 @@
                     <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
                         Be the first to know when events are announced. Join our community and receive updates!
                     </p>
-                    <a href="login.html" class="btn btn-primary">✨ Join Free Access</a>
-                    <a href="index.html#email-capture" class="btn btn-secondary">📧 Get Email Updates</a>
+                    <a href="members-new.html" class="btn btn-primary">✨ Join Free Access</a>
+                    <a href="pricing.html" class="btn btn-secondary">📧 Get Email Updates</a>
                 </div>
             </div>
         </div>
