--- a/members-new.html
+++ b/members-new.html
@@ -735,7 +735,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="index.html" class="logo"><img src="/images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
+            <a href="index.html" class="logo"><img src="images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="pricing.html">Pricing</a>
@@ -1545,13 +1545,13 @@
                     console.log('?? Redirecting to login...');
 
                     // Redirect to login page
-                    window.location.href = 'login.html';
+                    window.location.href = 'members-new.html';
                 } catch (error) {
                     console.error('? Logout failed:', error);
                     // Fallback - clear all storage anyway and redirect
                     sessionStorage.clear();
                     localStorage.clear();
-                    window.location.href = 'login.html';
+                    window.location.href = 'members-new.html';
                 }
             }
         }
