--- a/offline.html
+++ b/offline.html
@@ -332,7 +332,7 @@
             🔄 Reconnect to the Divine Temple
         </button>
         
-        <button class="reconnect-btn" onclick="window.location.href='/members-new.html'">
+        <button class="reconnect-btn" onclick="window.location.href='members-new.html'">
             🏠 Return to Sacred Portal
         </button>
     </div>
