--- a/payment-success.html
+++ b/payment-success.html
@@ -125,7 +125,7 @@
     <script>
         // Wait 3 seconds then redirect to members area
         setTimeout(() => {
-            window.location.href = '/members-new.html';
+            window.location.href = 'members-new.html';
         }, 3000);
     </script>
 </body>
