--- a/phase3-practice.html
+++ b/phase3-practice.html
@@ -1,340 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phase 3: Practice - Coming Soon | Divine Temple</title>
-    <meta name="description" content="Master daily Enochian Calendar practice and build your sacred ritual streak.">
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Phase 3: Practice - Enochian Mastery">
-    <meta property="og:description" content="30-day sacred calendar practice and ritual mastery.">
-    <meta property="og:image" content="https://edenconsciousnesssdt.com/images/phase3-preview.jpg">
-    <meta property="og:type" content="website">
-
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <style>
-        :root {
-            --primary-gold: #D4AF37;
-            --accent-blue: #4fc3f7;
-            --dark-bg: #0F0F23;
-            --glass-bg: rgba(255, 255, 255, 0.05);
-            --glass-border: rgba(255, 255, 255, 0.1);
-            --text-primary: #FFFFFF;
-            --text-secondary: rgba(255, 255, 255, 0.8);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #0a0a1e 0%, #1a1a2e 50%, #0f3460 100%);
-            color: var(--text-primary);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 2rem;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 50% 50%, rgba(79, 195, 247, 0.15) 0%, transparent 50%);
-            pointer-events: none;
-            z-index: -1;
-        }
-
-        .container {
-            max-width: 900px;
-            width: 100%;
-            text-align: center;
-        }
-
-        .lock-icon {
-            font-size: 6rem;
-            margin-bottom: 2rem;
-            animation: float 3s ease-in-out infinite;
-            filter: drop-shadow(0 0 30px rgba(79, 195, 247, 0.6));
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        .phase-badge {
-            display: inline-block;
-            background: var(--accent-blue);
-            color: white;
-            padding: 0.5rem 1.5rem;
-            border-radius: 20px;
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: clamp(2.5rem, 6vw, 4rem);
-            font-weight: 700;
-            background: linear-gradient(135deg, var(--accent-blue), var(--primary-gold));
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 1rem;
-        }
-
-        .subtitle {
-            font-size: 1.5rem;
-            color: var(--text-secondary);
-            margin-bottom: 3rem;
-        }
-
-        .locked-card {
-            background: var(--glass-bg);
-            backdrop-filter: blur(20px);
-            border: 2px solid var(--accent-blue);
-            border-radius: 25px;
-            padding: 3rem;
-            margin-bottom: 2rem;
-        }
-
-        .prerequisites {
-            margin-bottom: 2rem;
-        }
-
-        .prerequisites h3 {
-            font-size: 1.3rem;
-            margin-bottom: 1rem;
-            color: var(--accent-blue);
-        }
-
-        .prereq-item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
-            padding: 1rem;
-            background: rgba(79, 195, 247, 0.1);
-            border-radius: 15px;
-            margin-bottom: 1rem;
-        }
-
-        .prereq-icon {
-            font-size: 1.5rem;
-        }
-
-        .preview-content {
-            text-align: left;
-            margin-top: 2rem;
-        }
-
-        .preview-content h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: var(--text-primary);
-        }
-
-        .practice-features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-            margin-top: 2rem;
-        }
-
-        .feature-card {
-            background: rgba(79, 195, 247, 0.1);
-            border: 1px solid var(--accent-blue);
-            border-radius: 20px;
-            padding: 2rem;
-            text-align: center;
-            transition: all 0.3s ease;
-        }
-
-        .feature-card:hover {
-            background: rgba(79, 195, 247, 0.15);
-            transform: translateY(-5px);
-        }
-
-        .feature-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        .feature-title {
-            font-weight: 600;
-            font-size: 1.2rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .feature-desc {
-            color: var(--text-secondary);
-            font-size: 0.95rem;
-        }
-
-        .actions {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 2rem;
-        }
-
-        .btn {
-            padding: 1rem 2rem;
-            border-radius: 15px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            border: none;
-            font-size: 1rem;
-        }
-
-        .btn-primary {
-            background: var(--accent-blue);
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background: #38b2e8;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(79, 195, 247, 0.3);
-        }
-
-        .btn-secondary {
-            background: var(--glass-bg);
-            color: white;
-            border: 1px solid var(--glass-border);
-        }
-
-        .btn-secondary:hover {
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        @media (max-width: 768px) {
-            .lock-icon {
-                font-size: 4rem;
-            }
-
-            .locked-card {
-                padding: 2rem 1.5rem;
-            }
-
-            .practice-features {
-                grid-template-columns: 1fr;
-            }
-
-            .actions {
-                flex-direction: column;
-            }
-
-            .btn {
-                width: 100%;
-                justify-content: center;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="lock-icon">🔒</div>
-        <span class="phase-badge">Phase 3 - Locked</span>
-        <h1>The Practice</h1>
-        <p class="subtitle">Enochian Calendar Mastery</p>
-
-        <div class="locked-card">
-            <div class="prerequisites">
-                <h3>🎯 Unlock Requirements</h3>
-                <div class="prereq-item">
-                    <span class="prereq-icon">🌟</span>
-                    <span>Complete Phase 1: The Awakening (12 chapters)</span>
-                </div>
-                <div class="prereq-item">
-                    <span class="prereq-icon">💫</span>
-                    <span>Complete Phase 2: The Alignment (7 principles)</span>
-                </div>
-                <div class="prereq-item">
-                    <span class="prereq-icon">📓</span>
-                    <span>Submit workbook exercises from Phase 2</span>
-                </div>
-            </div>
-
-            <div class="preview-content">
-                <h3>🌙 Your 30-Day Sacred Practice Journey</h3>
-                <p style="color: var(--text-secondary); margin-bottom: 2rem;">
-                    Transform knowledge into embodied wisdom through daily practice with the ancient Enochian Calendar system.
-                </p>
-
-                <div class="practice-features">
-                    <div class="feature-card">
-                        <div class="feature-icon">📅</div>
-                        <div class="feature-title">Daily Calendar Wisdom</div>
-                        <div class="feature-desc">Align with sacred dates and divine timing</div>
-                    </div>
-
-                    <div class="feature-card">
-                        <div class="feature-icon">🔥</div>
-                        <div class="feature-title">Streak Tracking</div>
-                        <div class="feature-desc">Build consistency with gamified progress</div>
-                    </div>
-
-                    <div class="feature-card">
-                        <div class="feature-icon">🙏</div>
-                        <div class="feature-title">Sacred Rituals</div>
-                        <div class="feature-desc">Daily practices for spiritual deepening</div>
-                    </div>
-
-                    <div class="feature-card">
-                        <div class="feature-icon">🎯</div>
-                        <div class="feature-title">Manifestation Tracking</div>
-                        <div class="feature-desc">Monitor your alignment results</div>
-                    </div>
-
-                    <div class="feature-card">
-                        <div class="feature-icon">📊</div>
-                        <div class="feature-title">Progress Analytics</div>
-                        <div class="feature-desc">Visualize your spiritual growth</div>
-                    </div>
-
-                    <div class="feature-card">
-                        <div class="feature-icon">🏆</div>
-                        <div class="feature-title">Achievement Milestones</div>
-                        <div class="feature-desc">Earn badges for dedication</div>
-                    </div>
-                </div>
-
-                <div style="margin-top: 2rem; padding: 1.5rem; background: rgba(79, 195, 247, 0.15); border-radius: 15px;">
-                    <p style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">📈 30-Day Challenge Goal:</p>
-                    <p style="color: var(--text-secondary);">
-                        Complete daily Enochian date check-ins, sacred rituals, and manifestation tracking for 30 consecutive days to unlock Phase 4: Mastery.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="actions">
-            <a href="phase2-alignment.html" class="btn btn-primary">
-                ← View Phase 2
-            </a>
-            <a href="journey.html" class="btn btn-secondary">
-                Journey Dashboard
-            </a>
-        </div>
-    </div>
-</body>
-</html>
+<html><head>
+<meta http-equiv="refresh" content="0;url=phase3-mastery.html">
+<title>Redirecting...</title>
+</head><body>
+<p>Redirecting to <a href="phase3-mastery.html">phase3-mastery.html</a>...</p>
+<script>window.location.href='phase3-mastery.html';</script>
+</body></html>
