--- a/premium-success.html
+++ b/premium-success.html
@@ -176,7 +176,7 @@
             🔒 Your premium subscription is now active. You'll be billed $9.99 monthly. Cancel anytime.
         </p>
 
-        <a href="/members-new.html" class="cta-button">
+        <a href="members-new.html" class="cta-button">
             🏛️ Enter Divine Temple
         </a>
 
@@ -240,7 +240,7 @@
                 if (userData && (userData.isPremium || userData.premium || userData.is_premium)) {
                     console.log('🎉 Premium access confirmed! Redirecting to phase1-awakening...');
                     // Redirect to phase1-awakening.html after premium is confirmed
-                    window.location.href = '/phase1-awakening.html';
+                    window.location.href = 'phase1-awakening.html';
                     return;
                 } else {
                     // Premium not yet set, webhook may still be processing
@@ -270,7 +270,7 @@
             } else {
                 console.log('User not authenticated, redirecting to login...');
                 setTimeout(() => {
-                    window.location.href = '/members-new.html';
+                    window.location.href = 'members-new.html';
                 }, 2000);
             }
         });
