--- a/resources.html
+++ b/resources.html
@@ -555,9 +555,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#book">Book</a></li>
+                <li><a href="books.html">Book</a></li>
                 <li><a href="audiobook.html">Audiobook</a></li>
-                <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="sections/index.html">Temple</a></li>
                 <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="resources.html">Resources</a></li>
@@ -1028,7 +1028,7 @@
                     <h3>Community</h3>
                     <a href="testimonials.html">Testimonials</a>
                     <a href="book-reviews.html">Book Reviews</a>
-                    <a href="blog.html">Blog</a>
+                    <a href="resources.html">Blog</a>
                     <a href="events.html">Live Events</a>
                 </div>
                 <div class="footer-section">
