--- a/sections/daily-trivia-PREMIUM.html
+++ b/sections/daily-trivia-PREMIUM.html
@@ -1669,7 +1669,7 @@
     <div class="premium-container">
         <!-- Header -->
         <div class="premium-header">
-            <a href="../members.html" class="back-btn">
+            <a href="../members-new.html" class="back-btn">
                 <span>←</span>
                 <span>Back to Members Portal</span>
             </a>
