--- a/sections/index.html
+++ b/sections/index.html
@@ -219,7 +219,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo">
+                <img src="images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo">
                 <span class="logo-text">Eden Consciousness</span>
             </div>
             <ul class="nav-links">
@@ -319,6 +319,97 @@
                     <h3>Achievements & Rewards</h3>
                     <p>Earn badges, unlock rewards, and track your spiritual progress.</p>
                     <a href="reward-shop.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🔮</span>
+                    <h3>Chakras & Auras</h3>
+                    <p>Explore your energy centers, understand aura colors, and balance your chakra system.</p>
+                    <a href="chakras-auras.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">⚡</span>
+                    <h3>Energy Healing</h3>
+                    <p>Learn energy healing techniques, reiki principles, and subtle body practices.</p>
+                    <a href="energy-healing.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🪷</span>
+                    <h3>Devotion & Growth</h3>
+                    <p>Deepen your spiritual devotion through prayer, gratitude, and sacred commitment.</p>
+                    <a href="devotion-growth.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🛠️</span>
+                    <h3>Spiritual Tools</h3>
+                    <p>Practical tools for daily spiritual practice — calculators, trackers, and guides.</p>
+                    <a href="spiritual-tools.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🕯️</span>
+                    <h3>Spiritual Practices</h3>
+                    <p>Guided rituals, ceremonies, and daily spiritual routines for transformation.</p>
+                    <a href="spiritual-practices.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🎴</span>
+                    <h3>Tarot Guidance</h3>
+                    <p>Interactive tarot card readings for spiritual insight and daily reflection.</p>
+                    <a href="tarot.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🔮</span>
+                    <h3>Crystal Oracle</h3>
+                    <p>Receive crystal-based oracle messages and healing stone guidance.</p>
+                    <a href="crystal-oracle.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🎨</span>
+                    <h3>Mandala Coloring</h3>
+                    <p>Meditative mandala coloring for relaxation, focus, and creative expression.</p>
+                    <a href="mandala-coloring.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🎵</span>
+                    <h3>Singing Bowl Garden</h3>
+                    <p>Interactive singing bowl sound bath for deep relaxation and healing.</p>
+                    <a href="singing-bowl-garden.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🧠</span>
+                    <h3>Chakra Memory Match</h3>
+                    <p>Fun memory game to learn chakra colors, symbols, and properties.</p>
+                    <a href="chakra-memory-match.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">💎</span>
+                    <h3>Crystal Memory Game</h3>
+                    <p>Match crystals and learn their healing properties through play.</p>
+                    <a href="crystal-memory-game.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">📊</span>
+                    <h3>Progress Dashboard</h3>
+                    <p>Track your spiritual journey progress, streaks, and milestones.</p>
+                    <a href="progress-dashboard.html">Explore</a>
+                </div>
+
+                <div class="feature-card">
+                    <span class="emoji">🎬</span>
+                    <h3>Videos & Media</h3>
+                    <p>Spiritual teachings, guided practices, and transformational video content.</p>
+                    <a href="videos-media.html">Explore</a>
                 </div>
             </div>
         </div>
