--- a/testimonials.html
+++ b/testimonials.html
@@ -539,9 +539,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#book">Book</a></li>
+                <li><a href="books.html">Book</a></li>
                 <li><a href="audiobook.html">Audiobook</a></li>
-                <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="sections/index.html">Temple</a></li>
                 <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="resources.html">Resources</a></li>
@@ -815,7 +815,7 @@
                 <div class="footer-section">
                     <h3>Support</h3>
                     <a href="mailto:edenconsciousnesssdt@gmail.com">Contact Us</a>
-                    <a href="index.html#email-capture">Free Resources</a>
+                    <a href="pricing.html">Free Resources</a>
                     <a href="https://nazarite777.github.io/divine-temple">Visit Site</a>
                     <a href="members-new.html">Member Support</a>
                 </div>
