--- a/faq.html
+++ b/faq.html
@@ -438,9 +438,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#book">Book</a></li>
+                <li><a href="books.html">Book</a></li>
                 <li><a href="audiobook.html">Audiobook</a></li>
-                <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="sections/index.html">Temple</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="resources.html">Resources</a></li>
             </ul>
