--- a/phase4-mastery.html
+++ b/phase4-mastery.html
@@ -1,475 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phase 4: Mastery - Coming Soon | Divine Temple</title>
-    <meta name="description" content="Become a certified Divine Temple teacher and guide others on their journey.">
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Phase 4: Mastery - Teacher Certification">
-    <meta property="og:description" content="Complete your transformation and become a certified guide for others.">
-    <meta property="og:image" content="https://edenconsciousnesssdt.com/images/phase4-preview.jpg">
-    <meta property="og:type" content="website">
-
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <style>
-        :root {
-            --primary-gold: #D4AF37;
-            --accent-purple: #8B5CF6;
-            --dark-bg: #0F0F23;
-            --glass-bg: rgba(255, 255, 255, 0.05);
-            --glass-border: rgba(255, 255, 255, 0.1);
-            --text-primary: #FFFFFF;
-            --text-secondary: rgba(255, 255, 255, 0.8);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #0a0a1e 0%, #1a1a2e 50%, #0f3460 100%);
-            color: var(--text-primary);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 2rem;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 50% 50%, rgba(212, 175, 55, 0.15) 0%, transparent 50%);
-            pointer-events: none;
-            z-index: -1;
-            animation: pulse 4s ease-in-out infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; }
-        }
-
-        .container {
-            max-width: 900px;
-            width: 100%;
-            text-align: center;
-        }
-
-        .lock-icon {
-            font-size: 6rem;
-            margin-bottom: 2rem;
-            animation: float 3s ease-in-out infinite;
-            filter: drop-shadow(0 0 40px rgba(212, 175, 55, 0.8));
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0) rotate(0deg); }
-            50% { transform: translateY(-20px) rotate(5deg); }
-        }
-
-        .phase-badge {
-            display: inline-block;
-            background: linear-gradient(135deg, var(--primary-gold), #F59E0B);
-            color: white;
-            padding: 0.5rem 1.5rem;
-            border-radius: 20px;
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            box-shadow: 0 5px 20px rgba(212, 175, 55, 0.3);
-        }
-
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: clamp(2.5rem, 6vw, 4rem);
-            font-weight: 700;
-            background: linear-gradient(135deg, var(--primary-gold), #F59E0B, var(--accent-purple));
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 1rem;
-            animation: shimmer 3s ease-in-out infinite;
-            background-size: 200% 100%;
-        }
-
-        @keyframes shimmer {
-            0%, 100% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-        }
-
-        .subtitle {
-            font-size: 1.5rem;
-            color: var(--text-secondary);
-            margin-bottom: 3rem;
-        }
-
-        .locked-card {
-            background: linear-gradient(135deg, rgba(212, 175, 55, 0.1), rgba(139, 92, 246, 0.1));
-            backdrop-filter: blur(20px);
-            border: 2px solid var(--primary-gold);
-            border-radius: 25px;
-            padding: 3rem;
-            margin-bottom: 2rem;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .locked-card::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(45deg, transparent 30%, rgba(212, 175, 55, 0.1) 50%, transparent 70%);
-            animation: rotate 4s linear infinite;
-        }
-
-        @keyframes rotate {
-            from { transform: rotate(0deg); }
-            to { transform: rotate(360deg); }
-        }
-
-        .locked-card-content {
-            position: relative;
-            z-index: 1;
-        }
-
-        .prerequisites {
-            margin-bottom: 2rem;
-        }
-
-        .prerequisites h3 {
-            font-size: 1.3rem;
-            margin-bottom: 1rem;
-            color: var(--primary-gold);
-        }
-
-        .prereq-item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
-            padding: 1rem;
-            background: rgba(212, 175, 55, 0.1);
-            border: 1px solid rgba(212, 175, 55, 0.3);
-            border-radius: 15px;
-            margin-bottom: 1rem;
-        }
-
-        .prereq-icon {
-            font-size: 1.5rem;
-        }
-
-        .preview-content {
-            text-align: left;
-            margin-top: 2rem;
-        }
-
-        .preview-content h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: var(--text-primary);
-        }
-
-        .certification-path {
-            display: grid;
-            gap: 1.5rem;
-            margin-top: 2rem;
-        }
-
-        .cert-step {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid var(--glass-border);
-            border-left: 4px solid var(--primary-gold);
-            border-radius: 15px;
-            padding: 1.5rem;
-            transition: all 0.3s ease;
-        }
-
-        .cert-step:hover {
-            background: rgba(212, 175, 55, 0.1);
-            transform: translateX(10px);
-        }
-
-        .cert-step-header {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .cert-step-number {
-            background: var(--primary-gold);
-            color: var(--dark-bg);
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            flex-shrink: 0;
-        }
-
-        .cert-step-title {
-            font-weight: 600;
-            font-size: 1.1rem;
-        }
-
-        .cert-step-desc {
-            color: var(--text-secondary);
-            font-size: 0.95rem;
-            margin-left: 3rem;
-        }
-
-        .benefits-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        .benefit-card {
-            background: rgba(212, 175, 55, 0.1);
-            border: 1px solid rgba(212, 175, 55, 0.3);
-            border-radius: 15px;
-            padding: 1.5rem;
-            text-align: center;
-        }
-
-        .benefit-icon {
-            font-size: 2.5rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .benefit-text {
-            font-size: 0.95rem;
-            color: var(--text-secondary);
-        }
-
-        .premium-note {
-            margin-top: 2rem;
-            padding: 1.5rem;
-            background: linear-gradient(135deg, rgba(212, 175, 55, 0.2), rgba(139, 92, 246, 0.2));
-            border: 2px solid var(--primary-gold);
-            border-radius: 15px;
-        }
-
-        .premium-badge {
-            display: inline-block;
-            background: linear-gradient(135deg, var(--primary-gold), var(--accent-purple));
-            color: white;
-            padding: 0.4rem 1rem;
-            border-radius: 10px;
-            font-weight: 600;
-            font-size: 0.9rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .actions {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 2rem;
-        }
-
-        .btn {
-            padding: 1rem 2rem;
-            border-radius: 15px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            border: none;
-            font-size: 1rem;
-        }
-
-        .btn-primary {
-            background: linear-gradient(135deg, var(--primary-gold), #F59E0B);
-            color: white;
-        }
-
-        .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(212, 175, 55, 0.4);
-        }
-
-        .btn-secondary {
-            background: var(--glass-bg);
-            color: white;
-            border: 1px solid var(--glass-border);
-        }
-
-        .btn-secondary:hover {
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        @media (max-width: 768px) {
-            .lock-icon {
-                font-size: 4rem;
-            }
-
-            .locked-card {
-                padding: 2rem 1.5rem;
-            }
-
-            .benefits-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .actions {
-                flex-direction: column;
-            }
-
-            .btn {
-                width: 100%;
-                justify-content: center;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="lock-icon">👑</div>
-        <span class="phase-badge">Phase 4 - Locked</span>
-        <h1>The Mastery</h1>
-        <p class="subtitle">Teacher Certification Program</p>
-
-        <div class="locked-card">
-            <div class="locked-card-content">
-                <div class="prerequisites">
-                    <h3>🎯 Unlock Requirements</h3>
-                    <div class="prereq-item">
-                        <span class="prereq-icon">🌅</span>
-                        <span>Complete Phase 1: The Awakening</span>
-                    </div>
-                    <div class="prereq-item">
-                        <span class="prereq-icon">💫</span>
-                        <span>Complete Phase 2: The Alignment</span>
-                    </div>
-                    <div class="prereq-item">
-                        <span class="prereq-icon">📅</span>
-                        <span>Complete Phase 3: 30-Day Practice Challenge</span>
-                    </div>
-                    <div class="prereq-item">
-                        <span class="prereq-icon">⭐</span>
-                        <span>Premium Membership Required</span>
-                    </div>
-                </div>
-
-                <div class="preview-content">
-                    <h3>✨ Your Path to Certified Teacher</h3>
-                    <p style="color: var(--text-secondary); margin-bottom: 2rem;">
-                        Transform from student to master teacher. Guide others through their awakening journey and create income through sacred service.
-                    </p>
-
-                    <div class="certification-path">
-                        <div class="cert-step">
-                            <div class="cert-step-header">
-                                <div class="cert-step-number">1</div>
-                                <div class="cert-step-title">Teaching Foundations</div>
-                            </div>
-                            <div class="cert-step-desc">
-                                Master the art of guiding others through the 4-phase journey
-                            </div>
-                        </div>
-
-                        <div class="cert-step">
-                            <div class="cert-step-header">
-                                <div class="cert-step-number">2</div>
-                                <div class="cert-step-title">Practice Teaching Sessions</div>
-                            </div>
-                            <div class="cert-step-desc">
-                                Lead guided practice sessions with feedback from master teachers
-                            </div>
-                        </div>
-
-                        <div class="cert-step">
-                            <div class="cert-step-header">
-                                <div class="cert-step-number">3</div>
-                                <div class="cert-step-title">Certification Assessment</div>
-                            </div>
-                            <div class="cert-step-desc">
-                                Demonstrate mastery through teaching evaluation and written exam
-                            </div>
-                        </div>
-
-                        <div class="cert-step">
-                            <div class="cert-step-header">
-                                <div class="cert-step-number">4</div>
-                                <div class="cert-step-title">Launch Your Practice</div>
-                            </div>
-                            <div class="cert-step-desc">
-                                Receive your certificate, affiliate links, and teaching resources
-                            </div>
-                        </div>
-                    </div>
-
-                    <h3 style="margin-top: 3rem;">🎁 Certified Teacher Benefits</h3>
-                    <div class="benefits-grid">
-                        <div class="benefit-card">
-                            <div class="benefit-icon">🏅</div>
-                            <div class="benefit-text">Official Certification Badge</div>
-                        </div>
-                        <div class="benefit-card">
-                            <div class="benefit-icon">💰</div>
-                            <div class="benefit-text">Affiliate Revenue (30%)</div>
-                        </div>
-                        <div class="benefit-card">
-                            <div class="benefit-icon">📚</div>
-                            <div class="benefit-text">Teaching Resource Library</div>
-                        </div>
-                        <div class="benefit-card">
-                            <div class="benefit-icon">👥</div>
-                            <div class="benefit-text">Student Management Tools</div>
-                        </div>
-                        <div class="benefit-card">
-                            <div class="benefit-icon">🎓</div>
-                            <div class="benefit-text">Continuing Education</div>
-                        </div>
-                        <div class="benefit-card">
-                            <div class="benefit-icon">🌐</div>
-                            <div class="benefit-text">Teacher Directory Listing</div>
-                        </div>
-                    </div>
-
-                    <div class="premium-note">
-                        <span class="premium-badge">PREMIUM ONLY</span>
-                        <p style="color: var(--text-secondary); margin-top: 0.5rem;">
-                            Phase 4: Mastery is exclusively available to Premium and Elite members.
-                            Upgrade your membership to unlock the teacher certification program and begin earning
-                            through sacred service to the community.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="actions">
-            <a href="phase3-practice.html" class="btn btn-primary">
-                ← View Phase 3
-            </a>
-            <a href="journey.html" class="btn btn-secondary">
-                Journey Dashboard
-            </a>
-        </div>
-    </div>
-</body>
-</html>
+<html><head>
+<meta http-equiv="refresh" content="0;url=phase4-teaching.html">
+<title>Redirecting...</title>
+</head><body>
+<p>Redirecting to <a href="phase4-teaching.html">phase4-teaching.html</a>...</p>
+<script>window.location.href='phase4-teaching.html';</script>
+</body></html>
