--- a/sections/crystal-memory-game.html
+++ b/sections/crystal-memory-game.html
@@ -559,6 +559,12 @@
     </style>
 </head>
 <body>
+<!-- Back Navigation -->
+<div style="position:fixed;top:20px;left:20px;z-index:9999;display:flex;gap:10px;">
+<a href="../members-new.html" style="background:rgba(139,92,246,0.9);color:white;padding:10px 20px;border-radius:25px;text-decoration:none;font-weight:600;backdrop-filter:blur(10px);box-shadow:0 4px 15px rgba(0,0,0,0.3);font-size:0.9rem;">← Portal</a>
+<a href="index.html" style="background:rgba(245,158,11,0.9);color:white;padding:10px 20px;border-radius:25px;text-decoration:none;font-weight:600;backdrop-filter:blur(10px);box-shadow:0 4px 15px rgba(0,0,0,0.3);font-size:0.9rem;">☰ Temple Sections</a>
+</div>
+
     <div class="game-container">
         <button class="back-btn" onclick="window.parent.postMessage('back', '*')">
             ← Back to Temple
