--- a/sections/sacred-knowledge.html
+++ b/sections/sacred-knowledge.html
@@ -520,11 +520,11 @@
                 if (window.parent && window.parent.showSection) {
                     window.parent.showSection('dashboard');
                 } else {
-                    window.location.href = '../members.html';
+                    window.location.href = '../members-new.html';
                 }
             } catch (error) {
                 console.error('Navigation error:', error);
-                window.location.href = '../members.html';
+                window.location.href = '../members-new.html';
             }
         }
         
