--- a/sections/spiritual-tools.html
+++ b/sections/spiritual-tools.html
@@ -1185,11 +1185,11 @@
                     window.parent.showSection('dashboard');
                 } else {
                     // Fallback for direct access
-                    window.location.href = '../members.html';
+                    window.location.href = '../members-new.html';
                 }
             } catch (error) {
                 console.error('Navigation error:', error);
-                window.location.href = '../members.html';
+                window.location.href = '../members-new.html';
             }
         }
         
