Update phase1 with Firebase integration

--- a/premium-success.html
+++ b/premium-success.html
@@ -189,7 +189,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
-    <script src="/js/firebase-config.js"></script>
+    <script src="js/firebase-config.js"></script>
 
     <script>
         // Create confetti effect
