--- a/home.html
+++ b/home.html
@@ -1032,7 +1032,7 @@
     </script>
 
     <!-- Custom Analytics Module -->
-    <script src="/js/analytics.js"></script>
+    <script src="js/analytics.js"></script>
 </body>
 </html>
 
