--- a/phase1-awakening.html
+++ b/phase1-awakening.html
@@ -20,49 +20,9 @@
     <!-- Divine Temple Core -->
     <script src="js/firebase-config.js"></script>
     <script src="js/auth-helper.js"></script>
-    <script src="js/premium-access-control.js"></script>
     <script src="js/header.js" defer></script>
 
-    <!-- Premium Access Gate -->
-    <script>
-        function checkPremiumAccess() {
-            return new Promise(function (resolve) {
-                var checkId = setInterval(function () {
-                    if (typeof firebase !== 'undefined' && firebase.auth) {
-                        clearInterval(checkId);
-                        firebase.auth().onAuthStateChanged(async function (user) {
-                            if (!user) { resolve(false); return; }
-                            try {
-                                var doc = await firebase.firestore().collection('users').doc(user.uid).get();
-                                var d = doc.data() || {};
-                                var ok = d.isPremium || d.membershipStatus === 'premium' || d.paymentVerified;
-                                if (!ok) {
-                                    document.getElementById('accessDeniedOverlay').style.display = 'flex';
-                                    document.getElementById('loadingState').style.display = 'none';
-                                } else {
-                                    document.getElementById('accessDeniedOverlay').style.display = 'none';
-                                }
-                                resolve(!!ok);
-                            } catch (e) {
-                                console.error('Premium check error:', e);
-                                resolve(false);
-                            }
-                            var logoutBtn = document.getElementById('logoutBtn');
-                            if (logoutBtn) {
-                                logoutBtn.addEventListener('click', function () {
-                                    firebase.auth().signOut().then(function () {
-                                        window.location.href = 'dashboard.html';
-                                    });
-                                });
-                            }
-                        });
-                    }
-                }, 100);
-                setTimeout(function () { clearInterval(checkId); }, 6000);
-            });
-        }
-        checkPremiumAccess();
-    </script>
+    <!-- Premium access is handled by phase1-awakening.js (single auth gate) -->
 
     <style>
         /* ─── VARIABLES ─────────────────────────────────────── */
@@ -341,31 +301,37 @@
         /* ─── ACCESS DENIED ─────────────────────────────────── */
         .access-denied-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: linear-gradient(135deg, rgba(15,15,35,.98), rgba(26,26,46,.98));
+            background: rgba(10, 10, 25, 0.75);
+            backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
             display: flex; align-items: center; justify-content: center; z-index: 9999;
         }
         .access-denied-card {
             text-align: center;
-            background: linear-gradient(135deg, rgba(139,92,246,.08), rgba(212,175,55,.08));
-            border: 2px solid var(--accent-purple); border-radius: 22px;
-            padding: 3rem; max-width: 480px;
+            background: linear-gradient(135deg, rgba(20,20,45,.95), rgba(30,25,50,.95));
+            border: 1px solid rgba(212,175,55,.3); border-radius: 22px;
+            padding: 2.5rem 2rem; max-width: 500px; margin: 1rem;
+            box-shadow: 0 20px 60px rgba(0,0,0,.5);
         }
-        .access-denied-icon { font-size: 3.5rem; margin-bottom: 1rem; }
+        .access-denied-icon { font-size: 3rem; margin-bottom: 0.75rem; }
         .access-denied-card h2 {
-            font-size: 1.8rem; margin-bottom: 1rem;
+            font-size: 1.6rem; margin-bottom: 0.5rem;
             background: linear-gradient(135deg, var(--accent-purple), var(--accent-orange));
             -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;
         }
-        .access-denied-card p { color: var(--text-secondary); margin-bottom: 1.5rem; line-height: 1.6; }
-        .access-denied-buttons { display: flex; flex-direction: column; gap: 1rem; }
+        .access-denied-phase-label {
+            font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px;
+            color: var(--accent-orange); margin-bottom: 1rem; font-weight: 600;
+        }
+        .access-denied-card p { color: rgba(255,255,255,.7); margin-bottom: 1.5rem; line-height: 1.6; font-size: 0.95rem; }
+        .access-denied-buttons { display: flex; flex-direction: column; gap: 0.75rem; }
         .ad-btn {
-            padding: 1rem; border: none; border-radius: 12px;
-            font-weight: 700; cursor: pointer; transition: all .25s; text-decoration: none; display: block; text-align: center;
+            padding: 0.9rem; border: none; border-radius: 12px;
+            font-weight: 600; cursor: pointer; transition: all .25s; text-decoration: none; display: block; text-align: center; font-size: 0.95rem;
         }
         .ad-btn.upgrade { background: linear-gradient(135deg, var(--accent-orange), #D97706); color: white; }
         .ad-btn.upgrade:hover { transform: translateY(-2px); box-shadow: 0 8px 24px rgba(245,158,11,.3); }
-        .ad-btn.home { background: rgba(255,255,255,.08); color: var(--text-primary); border: 1px solid rgba(212,175,55,.25); }
-        .ad-btn.home:hover { background: rgba(255,255,255,.12); }
+        .ad-btn.home { background: rgba(255,255,255,.06); color: rgba(255,255,255,.8); border: 1px solid rgba(212,175,55,.2); }
+        .ad-btn.home:hover { background: rgba(255,255,255,.1); }
 
         /* ─── RESPONSIVE ────────────────────────────────────── */
         @media (max-width: 768px) {
@@ -386,12 +352,14 @@
     <!-- Access Denied (shown for non-premium users) -->
     <div id="accessDeniedOverlay" class="access-denied-overlay" style="display: none;">
         <div class="access-denied-card">
-            <div class="access-denied-icon">🔐</div>
-            <h2>Premium Access Required</h2>
-            <p>This sacred journey is exclusively for premium members. Upgrade to unlock Phase 1: Awakening and all premium content.</p>
+            <div class="access-denied-icon">🌅</div>
+            <div class="access-denied-phase-label">Phase 1 · Awakening</div>
+            <h2>Unlock Your Journey</h2>
+            <p>Phase 1 guides you through the complete Ya Heard Me audiobook with reflection questions, journal prompts, and progress tracking. Upgrade to premium to begin your transformation.</p>
             <div class="access-denied-buttons">
-                <a href="pricing.html" class="ad-btn upgrade">💎 Upgrade to Premium</a>
-                <a href="index.html" class="ad-btn home">← Back to Home</a>
+                <a href="pricing.html" class="ad-btn upgrade">Upgrade to Premium</a>
+                <a href="members-new.html" class="ad-btn home">Sign In to Existing Account</a>
+                <a href="journey.html" class="ad-btn home">← Back to Journey Overview</a>
             </div>
         </div>
     </div>
