--- a/pricing.html
+++ b/pricing.html
@@ -546,7 +546,7 @@
             }
         }
     </style>
-<script src="https://js.stripe.com/v3/"></script><script src="/js/stripe-integration.js"></script></head>
+<script src="https://js.stripe.com/v3/"></script><script src="js/stripe-integration.js"></script></head>
 <body>
     <!-- Header -->
     <header>
