--- a/phase2-understanding.html
+++ b/phase2-understanding.html
@@ -22,6 +22,7 @@
     <!-- System Scripts -->
     <script src="js/firebase-config.js"></script>
     <script src="js/auth-helper.js"></script>
+    <script src="js/journey-gate.js"></script>
 
     <style>
         body {
