Fix: show chapters by default, hide loading spinner

--- a/phase1-awakening.html
+++ b/phase1-awakening.html
@@ -419,13 +419,13 @@
         </div>
 
         <!-- Loading State -->
-        <div id="loadingState" class="loading">
+        <div id="loadingState" class="loading" style="display: none;">
             <div class="spinner"></div>
             <p>Loading your progress…</p>
         </div>
 
         <!-- Main Content (hidden until JS renders) -->
-        <div id="mainContent" style="display: none;">
+        <div id="mainContent" style="display: block;">
 
             <!-- Progress -->
             <div class="progress-section">
